# LR_1

./: .travis.yml  1_JSON_parser.cbp  1_JSON_parser.depend  1_JSON_parser.layout  ;;CMakeLists.txt  CMakeLists.txt  CONTRIBUTING.md  bashnic  json2.txt  main.cpp  string_reader.txt  task3.cpp
.github/: settings.yml
cmake/: CMakeCache.txt  CTestTestfile.cmake  FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake  Makefile  cmake_install.cmake
include/: header.hpp  json.h  json.hpp
scripts/: checks.sh  coverage.sh  duplication.sh  genenv.sh  tests.sh
sources/: json.cpp  json.h  main.cpp  source.cpp
tests/: test.cpp
tools/gate/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
tools/polly/: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  analyze-cxx17.cmake  analyze.cmake  android-ndk-r10e-api-16-armeabi-v7a-neon-clang-35-hid-sections.cmake  android-ndk-r10e-api-16-armeabi-v7a-neon-clang-35-hid.cmake  android-ndk-r10e-api-16-armeabi-v7a-neon-clang-35.cmake  android-ndk-r10e-api-16-armeabi-v7a-neon.cmake  android-ndk-r10e-api-16-x86-hid-sections.cmake  android-ndk-r10e-api-16-x86-hid.cmake  android-ndk-r10e-api-16-x86.cmake  android-ndk-r10e-api-19-armeabi-v7a-neon-c11.cmake  android-ndk-r10e-api-19-armeabi-v7a-neon-clang-libcxx.cmake  android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto.cmake  android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections.cmake  android-ndk-r10e-api-19-armeabi-v7a-neon.cmake  android-ndk-r10e-api-21-arm64-v8a-clang-35.cmake  android-ndk-r10e-api-21-arm64-v8a-gcc-49-hid-sections.cmake  android-ndk-r10e-api-21-arm64-v8a-gcc-49-hid.cmake  android-ndk-r10e-api-21-arm64-v8a-gcc-49.cmake  android-ndk-r10e-api-21-arm64-v8a.cmake  android-ndk-r10e-api-21-armeabi-clang-libcxx.cmake  android-ndk-r10e-api-21-armeabi-v7a-neon-clang-35.cmake  android-ndk-r10e-api-21-armeabi-v7a-neon-clang-libcxx.cmake  android-ndk-r10e-api-21-armeabi-v7a-neon-hid-sections.cmake  android-ndk-r10e-api-21-armeabi-v7a-neon.cmake  android-ndk-r10e-api-21-armeabi-v7a.cmake  android-ndk-r10e-api-21-armeabi.cmake  android-ndk-r10e-api-21-mips-clang-libcxx.cmake  android-ndk-r10e-api-21-mips.cmake  android-ndk-r10e-api-21-mips64.cmake  android-ndk-r10e-api-21-x86-64-hid-sections.cmake  android-ndk-r10e-api-21-x86-64-hid.cmake  android-ndk-r10e-api-21-x86-64.cmake  (+490 more)
(+119 files in other folders)
